# m2gui

./: Cargo.toml
platform/android/: Cargo.toml
platform/android/src/: lib.rs
platform/ios/Shared/: ContentView.swift  Persistence.swift  apptplApp.swift
platform/ios/m2gui.xcodeproj/: project.pbxproj
platform/ios/m2gui.xcodeproj/project.xcworkspace/xcuserdata/orlowang.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/m2gui.xcodeproj/xcuserdata/orlowang.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/windows/: Cargo.toml
platform/windows/src/: main.rs
src/: app.rs  derive.rs  lib.rs  m2macro.rs
