[package]
name = "m2gui"
version = "0.1.0"
authors = ["Orlo Wang <ow.cc@oulook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
# wgpu = "0.9"
