[package]
name = "m2gui"
version = "0.1.0"
authors = ["y0zong <yozong.w@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# Inflector = { version = "0.11.4", default-features = false }
# find-crate = "0.6"
# proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
# ndk = { version="0.3", features=["trace"] }
ndk-glue = { version="0.3", features=["logger"] }

[target.'cfg(not(target_os = "m2"))'.dependencies]
wgpu = "0.9"
winit = { version="0.25", features=[] }
