[package]
name = "windows"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9"
winit = { version="0.25", features=[] }
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"
async-std = "1.9"
bytemuck = { version="1.7", features=["derive"] }
